2009-02-06  Mike Krüger  <mkrueger@novell.com>

	* Project/Src/Parser/CSharp/cs.ATG:
	* Project/Src/Parser/CSharp/Parser.cs: fixed "Bug 463850 - MD
	  C# parser issue".

2009-02-06  Lluis Sanchez Gual  <lluis@novell.com>

	* NRefactory.mdp: Remove unused files.

2009-02-06  Lluis Sanchez Gual  <lluis@novell.com>

	* NRefactory.csproj: Migrated to MSBuild file format.

2009-01-26  Michael Hutchinson  <mhutchinson@novell.com>

	* NRefactory.mdp: Flush project format changes.

2009-01-09  Mike Krüger  <mkrueger@novell.com>

	* Project/Src/Parser/CSharp/cs.ATG:
	* Project/Src/Parser/CSharp/Parser.cs: Corrected parameter position.

2009-01-09  Mike Krüger  <mkrueger@novell.com>

	* Project/Src/Parser/CSharp/cs.ATG:
	* Project/Src/Parser/CSharp/Parser.cs: Corrected destructor start
	location.

2008-12-04  Lluis Sanchez Gual  <lluis@novell.com>

	* Makefile.am: Make it work for parallel build.

2008-11-18  Mike Krüger  <mkrueger@novell.com>

	* Project/Src/Lexer/CSharp/ConditionalCompilation.cs: made conditional
	compilation class public.

2008-10-30  Mike Krüger  <mkrueger@novell.com>

	* Project/Src/Parser/CSharp/cs.ATG:
	* Project/Src/Parser/CSharp/Parser.cs:
	* Project/Src/Parser/CSharp/CSharpParser.cs: Changed the grammar
	slightly.

2008-10-30  Mike Krüger  <mkrueger@novell.com>

	* Project/Src/Parser/IParser.cs:
	* Project/Src/Parser/AbstractParser.cs:
	* Project/Src/Parser/VBNet/VBNetParser.cs:
	* Project/Src/Parser/CSharp/CSharpParser.cs: Added pase type reference.

2008-10-30  Mike Krüger  <mkrueger@novell.com>

	* Project/Src/Parser/CSharp/CSharpParser.cs: fixed bug in nrefactory.

2008-10-30  Mike Krüger  <mkrueger@novell.com>

	* Project/Src/Parser/CSharp/CSharpParser.cs: fixed 'Bug 434705 - No
	autocomplete offered if not assigning result of 'new' to a variable'.

2008-10-07  Mike Krüger <mkrueger@novell.com> 

	* Project/Src/Parser/CSharp/CSharpParser.cs: fixed 'Bug 431183 -
	  Invalid UnaryExpr'.

2008-09-23  Mike Krüger <mkrueger@novell.com> 
